--- a/furniture/css/main.css
+++ b/furniture/css/main.css
@@ -1,189 +1,82 @@
 * {
 	box-sizing: border-box;
-	font-family: 'Raleway', sans-serif;
-	color: #383838;
+	font-family: 'Open Sans', sans-serif;
 }
 
 body {
 	margin: 0;
-	background-color: #ffffff;
-	background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23ababab' fill-opacity='0.4' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
+	padding: 0;
 }
 
-
+#container {
+	background-color: #f9fcfd;
+	display: flex;
+	flex-direction: column;
+}
 
 header {
-	background: linear-gradient(#FFF 30%, #ABABAB);
 	width: 100%;
-	height: 60px;
-	position: relative;
-	z-index: 10;
+	height: 195px;
+	background-image: linear-gradient(to bottom right, #85d8dc,  #0b7b85);
+	color: #fff;
+	margin-bottom: 150px;
 }
 
-header::after {
-	content: "";
-	box-shadow: 0 15px 15px -15px inset;
-	height: 6px;
-	width: 100%;
-	position: absolute;
-	bottom: -5px;
-	left: 0;
-}
-
-footer {
-	background: linear-gradient(#FFF 30%, #ABABAB);
-	height: 20px;
-	padding-left: 30px;
-	font-size: 0.8em;
-	padding-top: 3px;
-	z-index: 10;
-}
-
-footer::before {
-	content: "";
-	box-shadow: 0 -9px 15px -15px inset;
-	height: 5px;
-	width: 100%;
-	position: absolute;
-	bottom: -41px;
-	left: 0;
-}
-
-.wrap {
-	min-height: calc(100vh - 20px);
-	width: 90%;
-	margin: 0 auto;
-	background-color: #fafafa;
-	position: relative;
-	padding: 20px;
-}
-
-.wrap::before {
-	box-shadow: -15px 0 15px -15px inset;
-	content: "";
-	height: 100%;
-	left: -15px;
-	position: absolute;
-	width: 15px;
-	top: 0;
-}
-
-.wrap::after {
-	box-shadow: 15px 0 15px -15px inset;
-	content: "";
-	height: 100%;
-	right: -15px;
-	position: absolute;
-	width: 15px;
-	top: 0;
-}
-
-h1 {
+header h1 {
+	text-align: center;
+	padding-top: 50px;
+	font-size: 34px;
 	margin: 0;
 }
 
-
-#menu-items {
-	width: 90%;
-	margin: 0 auto;
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-around;
-}
-
-.menu-text {
-	display: none;
-}
-
-#menu-items article {
-	flex: 1;
-	padding: 10px;
-	border: 1px solid;
-	margin: 2%;
-	flex-basis: calc(50% - 40px);
-	cursor: pointer;
-}
-
-#menu-items article h2 a{
-	text-decoration: none;
-}
-
-#menu-items article h2, #menu-items article .icon{
+header h6 {
 	text-align: center;
+	font-size: 12px;
+	margin: 0;
 }
 
-#menu-items .icon .fa-user-circle,
-#menu-items .icon .fa-star-exclamation,
-#menu-items .icon .fa-flask,
-#menu-items .icon .fa-pen-alt,
-#menu-items .icon .fa-cog,
-#menu-items .icon .fa-suitcase{
-	height: 5em;
-	width: 5em;
+#my-picture {
+	display: block;
+	margin: 30px auto 0;
+	border-radius: 50%;
 }
 
-header .logo {
-	margin-left: 20px;
-	margin-top: 10px;
+main {
+	padding: 0 40px;
 }
 
-header nav {
-	position: absolute;
-	right: 6%;
-    top: 4px;
+section {
+	border-top: 3px solid #5cb6d2;
 }
 
-header nav ul li {
+section h2 {
+	margin-top: 0;
+	text-align: center;
+	color: #5cb6d2;
+	font-size: 26px;
+}
+
+.contact-icons {
+	text-align: center;
+	padding: 0;
+}
+.contact-icons li {
 	display: inline-block;
 }
 
-header nav a {
-	text-decoration: none;
+.contact-icons li:not(:last-child) {
+	margin-right: 20px;
 }
 
-header nav a.current {
-	font-weight: bold;
-	color: #15a5ed;
-	text-shadow: 1px 1px 2px #ABABAB;
-	pointer-events: none;
-	
+.contact-icons a{
+	color: #45a7af;
 }
 
-header nav ul li:not(:last-child) {
-    margin-right: 20px;
+.contact-icons a:hover{
+	color: #E8920C;
 }
 
-.logo {
-	height: 40px;
-	width: 40px;
-}
-
-
-
-/*--- MEDIA QUERIES ---*/
-
-@media all and (min-width: 576px) {
-	#menu-items {
-		width: 80%;
-	}
-
-	.menu-text {
-		display: block;
-	}
-}
-
-@media all and (min-width: 768px) {
-	section#menu-items article {
-		flex-basis: calc(30	% - 40px);
-	}
-}
-
-@media all and (min-width: 992px) {
-	
-}
-
-@media all and (min-width: 1200px) {
-	section#menu-items article {
-		margin: 1%;
-	}	
+.contact-icons i::before {
+	width: 42px;
+	height: 42px;
 }
